completed styling navbar to make it fixed and correctly aligned on the z-index

--- a/src/components/Header/Searchbar/style.scss
+++ b/src/components/Header/Searchbar/style.scss
@@ -3,13 +3,15 @@
   background-repeat: no-repeat;
   background-position: right center;
   padding: 8px;
+  border: none;
   border-radius: 4px;
   padding-right: 24px;
-  max-width: calc(100% - 48px);
+  max-width: 75%;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 640px) {
 	#searchbar {
-	  margin-right: 72px;
+	  margin-right: 12px;
 	 }
 }
