--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -2,8 +2,9 @@
   height: 60px;
   background-color: black;
   position: fixed;
-  width: 100%;
+  width: calc(100% - 60px);
   top: 0;
+  z-index: 1;
   a {
     color: white;
     text-decoration: none;
